Added daemonized webdriver.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,3 +2,5 @@
 workspace: /root
 phantomjs_version: 2.1.1
 phantomjs_bin_path: /usr/local/bin/phantomjs
+phantomjs_webdriver: no
+phantomjs_webdriver_port: 4444
